# linkedList

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: design.md
examples/: list_demo.c
include/: list.h
src/: list.c
tests/: test_list.c
